--- a/.github/workflows/app-advisor.yml
+++ b/.github/workflows/app-advisor.yml
@@ -7,7 +7,7 @@ on:
     - master
 
 env:
-  # Use docker.io for Docker Hub if empty
+  ADVISOR_VERSION: 1.1.2
   SERVER_PORT: 9003
   SERVER_URI: http://localhost:9003
 
@@ -17,10 +17,16 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
+      - name: Determine Maven command
+        run: |
+          mvn_command="mvn"
+          if [ -f mvnw ]; then
+            mvn_command="./mvnw"
+          fi        
+          echo "mvn_command=$mvn_command" >> "$GITHUB_ENV"
       - name: Start server
         run: |
-          curl -L -H "Authorization: Bearer ${{ secrets.ARTIFACTORY_TOKEN }}" -o spring-server.jar -X GET https://packages.broadcom.com/artifactory/spring-enterprise/com/vmware/tanzu/spring/tanzu-spring-server/1.1.2/tanzu-spring-server-1.1.2.jar
+          curl -L -H "Authorization: Bearer ${{ secrets.ARTIFACTORY_TOKEN }}" -o spring-server.jar -X GET https://packages.broadcom.com/artifactory/spring-enterprise/com/vmware/tanzu/spring/tanzu-spring-server/${{ env.ADVISOR_VERSION }}/tanzu-spring-server-${{ env.ADVISOR_VERSION }}.jar
           java -jar -Dserver.port=${{ env.SERVER_PORT }} spring-server.jar > advisor-server.log 2>&1 &
           sleep 10
           echo "Printing the last 5 lines of the log file:"
@@ -28,3 +34,11 @@ jobs:
       - name: Check server status
         run: |
           curl "${{ env.SERVER_URI }}/actuator/health"
+      - name: Download CLI
+        run: |
+          curl -L -H "Authorization: Bearer ${{ secrets.ARTIFACTORY_TOKEN }}" -o advisor-cli.tar -X GET https://packages.broadcom.com/artifactory/spring-enterprise/com/vmware/tanzu/spring/application-advisor-cli-linux/${{ env.ADVISOR_VERSION }}/application-advisor-cli-linux-${{ env.ADVISOR_VERSION }}.tar
+          tar -xf advisor-cli.tar --strip-components=1 --exclude=./META-INF
+          rm advisor-cli.tar
+          chmod +x advisor
+      - name: Compile prior to upgrade
+        run: $mvn_command compile
