--- a/.github/workflows/app-advisor.yml
+++ b/.github/workflows/app-advisor.yml
@@ -29,8 +29,8 @@ jobs:
           curl -L -H "Authorization: Bearer ${{ secrets.ARTIFACTORY_TOKEN }}" -o /tmp/spring-server.jar -X GET https://packages.broadcom.com/artifactory/spring-enterprise/com/vmware/tanzu/spring/tanzu-spring-server/${{ env.ADVISOR_VERSION }}/tanzu-spring-server-${{ env.ADVISOR_VERSION }}.jar
           java -jar -Dserver.port=${{ env.SERVER_PORT }} /tmp/spring-server.jar > /tmp/advisor-server.log 2>&1 &
           sleep 10
-          echo "Printing the last 5 lines of the log file:"
-          tail -n 3 advisor-server.log 
+          echo "Printing the last lines of the log file:"
+          tail -n 3 /tmp/advisor-server.log 
       - name: Check server status
         run: |
           curl "${{ env.SERVER_URL }}/actuator/health"
