--- a/.github/workflows/app-advisor.yml
+++ b/.github/workflows/app-advisor.yml
@@ -92,9 +92,9 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
           git checkout -b "app-advisor/upgrade"
-          git add *
-          git commit -m "Upgrade step"
-          git push --set-upstream origin "app-advisor/upgrade"
+          GIT_CURL_VERBOSE=1 GIT_TRACE=1 git add *
+          GIT_CURL_VERBOSE=1 GIT_TRACE=1 git commit -m "Upgrade step"
+          GIT_CURL_VERBOSE=1 GIT_TRACE=1 git push --set-upstream origin "app-advisor/upgrade"
       - name: Create pull request
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
