--- a/.github/workflows/app-advisor.yml
+++ b/.github/workflows/app-advisor.yml
@@ -39,45 +39,11 @@ jobs:
           curl -L -H "Authorization: Bearer ${{ secrets.ARTIFACTORY_TOKEN }}" -o /tmp/advisor-cli.tar -X GET https://packages.broadcom.com/artifactory/spring-enterprise/com/vmware/tanzu/spring/application-advisor-cli-linux/${{ env.ADVISOR_VERSION }}/application-advisor-cli-linux-${{ env.ADVISOR_VERSION }}.tar
           tar -xf /tmp/advisor-cli.tar --strip-components=1 --exclude=./META-INF -C /tmp
           chmod +x /tmp/advisor
-      - name: Create or edit Maven settings.xml
-        run: |
-          mkdir -p ~/.m2
-          cat <<EOF > ~/.m2/settings.xml
-          <settings xmlns="http://maven.apache.org/SETTINGS/1.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-              xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0 https://maven.apache.org/xsd/settings-1.0.0.xsd">
-            <servers>
-              <server>
-                <id>spring-enterprise-subscription</id>
-                <username>${{ secrets.ARTIFACTORY_USER }}</username>
-                <password>${{ secrets.ARTIFACTORY_TOKEN }}</password>
-              </server>
-            </servers>
-            <profiles>
-              <profile>
-                <id>spring-enterprise</id>
-                <activation>
-                  <activeByDefault>true</activeByDefault>
-                </activation>
-                <repositories>
-                  <repository>
-                    <id>spring-enterprise-subscription</id>
-                    <url>https://packages.broadcom.com/artifactory/spring-enterprise</url>
-                  </repository>
-                </repositories>
-                <pluginRepositories>
-                  <pluginRepository>
-                    <id>spring-enterprise-subscription</id>
-                    <url>https://packages.broadcom.com/artifactory/spring-enterprise</url>
-                  </pluginRepository>
-                </pluginRepositories>
-              </profile>
-            </profiles>
-            <activeProfiles>
-              <activeProfile>spring-enterprise</activeProfile>
-            </activeProfiles>
-            <mirrors/>
-          </settings>
-          EOF
+      - name: Generates Maven Settings
+        uses: 's4u/maven-settings-action@v3.0.0'
+        with:
+          servers: '[{"id": "tanzu-spring-release", "username":  "${{ secrets.ARTIFACTORY_USER }}", "password": "${{ secrets.ARTIFACTORY_TOKEN }}"}]'
+          repositories: '[{"id":"tanzu-spring-release", "name":"Spring Enterprise Supported Releases","url":"https://packages.broadcom.com/artifactory/spring-enterprise","snapshots":{"enabled":false}}]'
       - name: Compile prior to upgrade
         run: $mvn_command -q compile
       - name: Upgrade loop
@@ -91,10 +57,11 @@ jobs:
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
+          git config set advice.addIgnoredFile false
           git checkout -b "app-advisor/upgrade"
-          GIT_CURL_VERBOSE=1 GIT_TRACE=1 git add *
-          GIT_CURL_VERBOSE=1 GIT_TRACE=1 git commit -m "Upgrade step"
-          GIT_CURL_VERBOSE=1 GIT_TRACE=1 git push --set-upstream origin "app-advisor/upgrade"
+          git add *
+          git commit -m "Upgrade step"
+          git push --set-upstream origin "app-advisor/upgrade"
       - name: Create pull request
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
