--- a/.github/workflows/app-advisor.yml
+++ b/.github/workflows/app-advisor.yml
@@ -55,8 +55,7 @@ jobs:
           GIT_TOKEN_FOR_PRS: ${{ secrets.GITHUB_TOKEN }}
         run: |
           /tmp/advisor build-config get
-          /tmp/advisor upgrade-plan get --url=${{ env.SERVER_URL }}
-          /tmp/advisor upgrade-plan apply --url=${{ env.SERVER_URL }}
+          /tmp/advisor build-config publish --url=$ADVISOR_SERVER
           /tmp/advisor upgrade-plan apply --after-upgrade-cmd=compile --push --url=${{ env.SERVER_URL }} --token=${{ secrets.GITHUB_TOKEN }}
       - name: Get errors if exist
         if: hashFiles('.advisor/errors/') != ''
