--- a/.github/workflows/app-advisor.yml
+++ b/.github/workflows/app-advisor.yml
@@ -1,4 +1,4 @@
-name: App Advisor
+name: App Advisor Upgrade
 
 on:
   workflow_dispatch:
@@ -16,7 +16,7 @@ env:
   SERVER_URL: http://localhost:9003
 
 jobs:
-  analyse:
+  app-advisor-apply-upgrade:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -31,29 +31,29 @@ jobs:
           fi
           echo "Maven command detected as '$mvn_command'"
           echo "mvn_command=$mvn_command" >> "$GITHUB_ENV"
-      - name: Start server
+      - name: Start Application Advisor server
         run: |
           curl -L -H "Authorization: Bearer ${{ secrets.ARTIFACTORY_TOKEN }}" -o /tmp/spring-server.jar -X GET https://packages.broadcom.com/artifactory/spring-enterprise/com/vmware/tanzu/spring/tanzu-spring-server/${{ env.ADVISOR_VERSION }}/tanzu-spring-server-${{ env.ADVISOR_VERSION }}.jar
           java -jar -Dserver.port=${{ env.SERVER_PORT }} /tmp/spring-server.jar > /tmp/advisor-server.log 2>&1 &
           sleep 10
           echo "Printing the last lines of the log file:"
           tail -n 3 /tmp/advisor-server.log 
-      - name: Check server status
+      - name: Check Application Advisor server status
         run: |
           curl "${{ env.SERVER_URL }}/actuator/health"
-      - name: Download CLI
+      - name: Download Application Advisor CLI
         run: |
           curl -L -H "Authorization: Bearer ${{ secrets.ARTIFACTORY_TOKEN }}" -o /tmp/advisor-cli.tar -X GET https://packages.broadcom.com/artifactory/spring-enterprise/com/vmware/tanzu/spring/application-advisor-cli-linux/${{ env.ADVISOR_VERSION }}/application-advisor-cli-linux-${{ env.ADVISOR_VERSION }}.tar
           tar -xf /tmp/advisor-cli.tar --strip-components=1 --exclude=./META-INF -C /tmp
           chmod +x /tmp/advisor
-      - name: Generates Maven Settings
+      - name: Generate Maven settings
         uses: 's4u/maven-settings-action@v3.0.0'
         with:
           servers: '[{"id": "tanzu-spring-release", "username":  "${{ secrets.ARTIFACTORY_USER }}", "password": "${{ secrets.ARTIFACTORY_TOKEN }}"}]'
           repositories: '[{"id":"tanzu-spring-release", "name":"Spring Enterprise Supported Releases","url":"https://packages.broadcom.com/artifactory/spring-enterprise","snapshots":{"enabled":false}}]'
-      - name: Compile prior to upgrade
+      - name: Compile code prior to upgrade
         run: $mvn_command -q compile
-      - name: Upgrade loop
+      - name: Apply next Application Advisor upgrade step
         continue-on-error: true
         run: |
           /tmp/advisor build-config get
