--- a/.github/workflows/app-advisor.yml
+++ b/.github/workflows/app-advisor.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          ref: master
+          ref: ${{ github.event_name == 'pull_request' && 'master' || github.ref_name }}
       - name: Determine Maven command
         run: |
           mvn_command="mvn"
